--- a/Projeto_AssistenteDeCompras.ipynb
+++ b/Projeto_AssistenteDeCompras.ipynb
@@ -33,7 +33,7 @@
         "#Configurações iniciais\n",
         "import google.generativeai as genai\n",
         "\n",
-        "GOOGLE_API_KEY=\"AIzaSyAL7DurWlNrqOM_egqlecxCU0cuBO9PLfI\"\n",
+        "GOOGLE_API_KEY=\"SUA_API_KEY\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
